# ModuleSperate

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
logan/: CMakeLists.txt  build.gradle
logan/src/androidTest/java/com/hrz/logan/: ExampleInstrumentedTest.java
logan/src/main/: AndroidManifest.xml
logan/src/main/java/com/hrz/logan/: CLoganProtocol.java  ConstantCode.java  Logan.java  LoganConfig.java  LoganControlCenter.java  LoganModel.java  LoganProtocol.java  LoganProtocolHandler.java  LoganThread.java  OnLoganProtocolStatus.java  SendAction.java  SendLogRunnable.java  TestJni.java  Util.java  WriteAction.java
logan/src/main/jni/: aes_util.c  clogan_core.c  clogan_core.h  clogan_protocol.c  clogan_protocol.h  com_hrz_logan_TestJni.c  com_hrz_logan_TestJni.h  construct_data.c  json_util.c
logan/src/main/res/values/: strings.xml
logan/src/test/java/com/hrz/logan/: ExampleUnitTest.java
modulea/: build.gradle
modulea/src/main/: AndroidManifest.xml
moduleb/src/main/: AndroidManifest.xml
modulestandalone/moduleastandalone/: build.gradle
modulestandalone/moduleastandalone/src/main/: AndroidManifest.xml
modulestandalone/moudleqrcodestandalone/: build.gradle
poplayer_module/: build.gradle
poplayer_module/src/main/: AndroidManifest.xml
qrcode/: build.gradle
router/: build.gradle
router/src/main/: AndroidManifest.xml
xsh/: build.gradle
xsh/src/main/: AndroidManifest.xml
(+111 files in other folders)
